<resources>
    <string name="app_name">Puntokus</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="linkSignUp">No account yet? <u>Create one</u></string>
    <string name="linkLogin">Already have an account? <u>Log in</u></string>
    <string name="fillFields">Don\'t let any empty field</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="menu_account">Account</string>
    <string name="menu_play">Play</string>
    <string name="menu_ranking">Ranking</string>
    <string name="lblNickname_account">Nickname</string>
    <string name="lblEmail_account">Email</string>
    <string name="loadingData">Loading...</string>
    <string name="invalidPassword">" The password must have at least six characters."</string>
    <string name="easy">EASY</string>
    <string name="normal">NORMAL</string>
    <string name="hard">HARD</string>
    <string name="sick">SICK</string>
    <string name="evaluate">Check</string>
    <string name="refresh">Clean</string>
    <string name="newGame">New game</string>
    <string name="isCorrect">Correct!</string>
    <string name="isWrong">That\'s WRONG bro</string>
    <string name="dialog_newGame">Do you want to start a new game? All progress will be deleted</string>
    <string name="dialog_newGame_start">New game</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_clean">The board will be cleaned</string>
    <string name="ok">Ok</string>

    <string name="titleConfirmExit">Exit</string>
    <string name="msgConfirmExit">Do you really want to exit? All progress will be deleted</string>
    <string name="all">ALL</string>
    <string name="logout">Log out</string>
    <string name="msgExitLogin">Do you really want to exit the app?</string>
    <string name="password">Password</string>
    <string name="rememberPassword"> <u>I\'ve forgotten my password</u> </string>
    <string name="emailSent">Email sent</string>
    <string name="emailNeeded">Email field needed</string>
    <string name="error_emailSent">Error sending the email</string>
    <string name="errorLogin">Error login</string>
    <string name="sounds">Sounds</string>
    <string name="music">Music</string>
    <string name="pressBack">Please press back button to go back</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="msgConfirmLogout">Do you really want to log out?</string>
    <string name="msgConfirmDeleteAccount">All the data will be deleted, including game data.</string>
    <string name="accountDeleted">User account and game date deleted.</string>
    <string name="error">Error</string>
    <string name="loggingInWait">Logging in, be patient, this may take a while.</string>
    <string name="gameDataSaved">Game data saved</string>
    <string name="userAlreadyExists">The user already exists</string>
    <string name="registeringUser">Registering user</string>
    <string name="infoColumn">You must put as many points in each<font fgcolor="#FF0000"> column </font>as the number indicates the <font fgcolor="#4656b4">column marker </font></string>
    <string name="infoRow">You must put as many points in each<font fgcolor="#FF0000"> row </font>as the number indicates the <font fgcolor="#4656b4">row marker </font></string>
    <string name="solvedExample">Example solved</string>
    <string name="moreThanOneSol">Remember that there may be more than one possible solution.</string>
    <string name="howToPlay">How to play</string>
    <string name="scv_info">Click here to learn how to play!</string>
    <string name="errorLoading">Error loading data. Check internet conecction and retry later.</string>


</resources>
