<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RankingFragment">


    <RadioGroup
        android:id="@+id/RGfiltrar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        >


        <RadioButton

            android:id="@+id/RBAll"
            android:text="@string/all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"/>

        <RadioButton
            android:id="@+id/RBeasy"
            android:text="@string/easy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"/>

        <RadioButton
            android:id="@+id/RBnormal"
            android:text="@string/normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"/>

        <RadioButton
            android:id="@+id/RBhard"
            android:text="@string/hard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"/>
        <RadioButton
            android:id="@+id/RBsick"
            android:text="@string/sick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"/>
    </RadioGroup>



    <ImageView
        android:id="@+id/logoRanking"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/RGfiltrar"
        app:srcCompat="@drawable/ic_podiumcoloured"
        />
    <ListView
        android:id="@+id/listView_ranking"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#00FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/logoRanking"
        />

</RelativeLayout>