<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="150dp"
    android:layout_marginHorizontal="30dp"
    android:layout_marginTop="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.customDialogs.InfoDialogFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@drawable/roundedrectangleshape2"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/howToPlay"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                />

            <TextView
                android:id="@+id/txtInfoColumn"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:text="@string/infoColumn"
                />

            <ImageView
                android:id="@+id/imgInfoColumn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/infocolumn"
                android:adjustViewBounds="true"
                ></ImageView>

            <TextView
                android:id="@+id/txtInfoRow"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:text="@string/infoRow"
                />

            <ImageView
                android:id="@+id/imgInfoRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/inforow"
                android:adjustViewBounds="true"
                ></ImageView>


            <TextView
                android:id="@+id/txtSolvedExample"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/solvedExample"
                />

            <ImageView
                android:id="@+id/imgSolvedExample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/solvedexample"
                android:adjustViewBounds="true"
                android:layout_margin="5dp"
                ></ImageView>

            <TextView
                android:id="@+id/txtSolutions"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:text="@string/moreThanOneSol"
                />

        </LinearLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>