<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PlayFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_margin="5dp"
        android:id="@+id/infobtn"
        app:srcCompat="@drawable/ic_question"
        android:backgroundTint="@color/sombra"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        app:fabSize="mini"
        app:borderWidth="0dp"
        android:elevation="0dp"
        app:elevation="10dp"
        android:scaleType="center"

        app:rippleColor="@color/sombra"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_height="wrap_content"

        ></com.google.android.material.floatingactionbutton.FloatingActionButton>


    <Button

        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        android:background="#2FFF00"

        android:textSize="20dp"
        android:text="@string/easy"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/view2"
        android:padding="20dp"
        android:textSize="20dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFEA00"

        android:text="@string/normal"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/view3"
        android:padding="20dp"
        android:textSize="20dp"
        android:background="#FF6A00"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/hard"

        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintBottom_toTopOf="@id/view4"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FF0000"
        android:padding="20dp"
        android:text="@string/sick"
        android:textSize="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>