<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sombra"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AccountFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:fillViewport="true"
            android:background="@drawable/roundedrectangleshape"
            android:backgroundTint="@color/colorIntermedio1"
            android:layout_margin="10dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout

                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/sectionTitleAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_account"
                        android:textSize="50dp"
                        />


                    <TextView

                        android:id="@+id/lblNickname_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/lblNickname_account"
                        android:textSize="25dp"
                        android:textStyle="italic"
                        />

                    <TextView
                        android:id="@+id/txtNickname_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:paddingStart="15dp"
                        android:paddingBottom="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/loadingData"
                        android:textSize="25dp"
                        />

                    <TextView
                        android:id="@+id/lblEmail_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/lblEmail_account"
                        android:textSize="25dp"
                        android:textStyle="italic"
                        />

                    <TextView
                        android:id="@+id/txtEmail_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:paddingStart="15dp"
                        android:paddingBottom="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/loadingData"

                        android:textSize="25dp"
                        />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:id="@+id/txtSounds"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="@string/sounds"
                            android:textSize="20dp"

                            />


                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/toggleSounds"
                            android:layout_marginEnd="35dp"
                            android:textOn="ON"
                            android:textOff="OFF"
                            android:showText="false"
                            android:splitTrack="false"
                            android:layout_weight="0.8"

                            />
                    </LinearLayout>



                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/txtMusic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="@string/music"
                            android:textSize="20dp"

                            />


                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/toggleMusic"
                            android:textOn="ON"
                            android:textOff="OFF"
                            android:showText="false"
                            android:layout_marginEnd="35dp"
                            android:layout_weight="0.8"

                            />
                    </LinearLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton

                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:background="@color/colorOscuro1"
                    android:padding="12dp"
                    android:text="@string/logout"
                    android:layout_gravity="bottom"
                    android:textColor="@color/sombra"
                    />

            </LinearLayout>



        </ScrollView>




</FrameLayout>